--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,10 @@
     100%  {color:violet; left:0px; top:20px;}
 }
 
+.programming img{
+  margin-top:5%;
+  height:40px;
+}
 </style>
 
   <body>
@@ -98,7 +102,7 @@
       <div class="row">
           <div id="heading" class="col-lg-12">
               <h1 class="page-header">
-                <i>Hello, World !</i><br>
+                <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hello, World !</i><br>
                   <!-- <small>Susan</small> -->
                   <span>
                   你<small>/nǐ/</small>好<small>/hǎo/</small>，
@@ -147,12 +151,12 @@
                 </a>
               </div>
               <hr>
-              <h3>About Me</h3>
+              <h2>About Me</h2>
               <div id="donutchart" class="">
               </div>
               <hr>
              <!-- <div class="barChart"> -->
-              <h3>SKILLS</h3>
+              <h2>SKILLS</h2>
               <h4>Programming</h4>
               <div id="barchartProgramming"></div>
               <h4>Framework</h4>
@@ -166,13 +170,24 @@
         </div>
         <div class="col-lg-9" style="padding-left:2%">
           <div id="projects">
-            <h3 class="text-center">PROJECTS</h3>
+            <h2 class="text-center">PROJECTS</h2>
             <!-- Project One -->
             <div class="row">
               <div class="col-md-7">
                 <a href="#">
                   <img class="img-responsive" src="http://placehold.it/700x300" alt="">
                 </a>
+                <div class="programming">
+                  <img src="./images/fw-nodejs.png">
+                  <img src="./images/pl-js.png">
+                  <img src="./images/pl-sql.png">
+                  <img src="./images/db-postgreSQL.png">
+                  <img src="./images/pl-sequelize.png">
+                  <img src="./images/lb-jquery.gif">
+                  <img src="./images/pl-css-html.png">
+                  <img src="./images/fw-boostrap.png">
+
+                </div>
               </div>
               <div class="col-md-5">
                 <h3 class="text-success"><i class="fa fa-wrench" aria-hidden="true"></i><i class="fa fa-home" aria-hidden="true"></i>&nbsp;&nbsp;Build Me</h3>
@@ -209,6 +224,13 @@
                     <a href="#">
                         <img class="img-responsive" src="./images/web-visualcode.jpg" alt="">
                     </a>
+                    <div class="programming">
+                      <img src="./images/pl-php.png">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/lb-jquery.gif">
+                      <img src="./images/pl-css-html.png">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
                 </div>
                 <div class="col-md-5">
                   <h3><img src="./images/logo-visualcode.jpg" alt="" style="width:45px">&nbsp;Visual Code</h3>
@@ -230,6 +252,15 @@
                     <a href="#">
                         <img class="img-responsive" src="./images/web-tf.jpg" alt="">
                     </a>
+                    <div class="programming">
+                      <img src="./images/pl-php.png">
+                      <img src="./images/db-mysql.png">
+                      <img src="./images/pl-sql.png">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/lb-jquery.gif">
+                      <img src="./images/pl-css-html.png">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
                 </div>
                 <div class="col-md-5">
                   <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">&nbsp;True or False</h3>
@@ -247,9 +278,18 @@
               <!-- Project Three -->
               <div class="row">
                   <div class="col-md-7">
-                      <a href="#">
-                          <img class="img-responsive" src="./images/web-mc.jpg" alt="">
-                      </a>
+                    <a href="#">
+                        <img class="img-responsive" src="./images/web-mc.jpg" alt="">
+                    </a>
+                    <div class="programming">
+                      <img src="./images/pl-php.png">
+                      <img src="./images/db-mysql.png">
+                      <img src="./images/pl-sql.png">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/lb-jquery.gif">
+                      <img src="./images/pl-css-html.png">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">&nbsp;Multiple Choice Test</h3>
@@ -268,9 +308,18 @@
               <div class="row">
 
                   <div class="col-md-7">
-                      <a href="">
-                          <img class="img-responsive" src="./images/web-dreamgo.jpg" alt="" style="">
-                      </a>
+                    <a href="">
+                        <img class="img-responsive" src="./images/web-dreamgo.jpg" alt="" style="">
+                    </a>
+                    <div class="programming">
+                      <img src="./images/pl-php.png">
+                      <img src="./images/db-mysql.png">
+                      <img src="./images/pl-sql.png">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/lb-jquery.gif">
+                      <img src="./images/pl-css-html.png">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
                   </div>
                   <div class="col-md-5">
                       <h3><a href="http://dreamgo.com"><img src="./images/logo-dreamgo.jpg" style="width:45px">&nbsp;Dream Go Inc.</a></h3>
@@ -292,9 +341,17 @@
               <!-- Project Five -->
               <div class="row">
                   <div class="col-md-7">
-                      <a href="#">
-                          <img class="img-responsive" src="./images/web-terrestrial.jpg" alt="">
-                      </a>
+                    <a href="#">
+                        <img class="img-responsive" src="./images/web-terrestrial.jpg" alt="">
+                    </a>
+                    <div class="programming">
+                      <img src="./images/lb-d3.png">
+                      <img src="./images/pl-php.png">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/lb-jquery.gif">
+                      <img src="./images/pl-css-html.png">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-ccny.jpg" alt="" style="width:45px">&nbsp;Terrestrial Hydrology Viz</h3>
@@ -317,9 +374,16 @@
                 <!-- Project Six -->
               <div class="row">
                   <div class="col-md-7">
-                      <a href="">
-                          <img class="img-responsive" src="./images/web-pipeline.jpg" alt="">
-                      </a>
+                    <a href="">
+                        <img class="img-responsive" src="./images/web-pipeline.jpg" alt="">
+                    </a>
+                     <div class="programming">
+                      <img src="./images/fw-django.png">
+                      <img src="./images/pl-sequelize.png">
+                      <img src="./images/pl-js.png">
+                      <img src="./images/pl-css-html.png">
+                      <img src="./images/fw-boostrap.png">
+                    </div>
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-ccny.jpg" alt="" style="width:45px">&nbsp;Pipeline Monitor</h3>
@@ -341,9 +405,14 @@
                 <!-- Project 7 -->
               <div class="row">
                   <div class="col-md-7">
-                      <a href="#">
-                          <img  alt="">
-                      </a>
+                    <a href="" class="btn" style="font-size:3vw;height:300px">
+                      <!-- <img  alt=""> -->
+                      E-Book Sharing System
+                    </a>
+                    <div class="programming">
+                      <img src="./images/pl-java.png">
+                      <img src="./images/pl-sql.png">
+                    </div>
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-ccny.jpg" alt="" style="width:45px">&nbsp;E-book Sharing System</h3>
@@ -354,7 +423,7 @@
                         <li>Implemented a pipeline monitor to monitor the process of generating data and a dashboard to visualize the result</li>
                       </ul>
                       <div class="btn-group">
-                        <a class="btn" href="https://github.com/susanjiang03/pipeline_monitor"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
+                        <a class="btn" href="https://github.com/susanjiang03/EbookSharing"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                         </a>
                         <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                       </div>
