add youtube video

--- a/public/index.html
+++ b/public/index.html
@@ -40,24 +40,24 @@
 
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes example {
-    0%    {color:red; left:0px; top:0px;}
-    10%   {color:orange; left:250px; top:0px;}
-    25%   {color:yellow; left:500px; top:0px;}
-    50%   {color:green; left:750px; top:0px;}
-    75%   {color:blue; left:500px; top:0px;}
-    90%   {color:indigo; left:250px; top:20px;}
-    100%  {color:violet; left:0px; top:20px;}
+    5%    {color:red; left:0; top:0;}
+    20%   {color:orange; left:20%; top:10%;}
+    40%   {color:yellow; left:40%; top:0;}
+    60%   {color:green; left:70%; top:10%;}
+    70%   {color:blue; left:40%; top:0;}
+    90%   {color:indigo; left:20%; top:10%;}
+    100%  {color:violet; left:0%; top:0;}
 }
 
 /* Standard syntax */
 @keyframes example {
-    0%    {color:red; left:0px; top:0px;}
-    10%   {color:orange; left:250px; top:0px;}
-    25%   {color:yellow; left:500px; top:0px;}
-    50%   {color:green; left:750px; top:0px;}
-    75%   {color:blue; left:500px; top:0px;}
-    90%   {color:indigo; left:250px; top:20px;}
-    100%  {color:violet; left:0px; top:20px;}
+    5%    {color:red; left:0; top:0;}
+    20%   {color:orange; left:20%; top:10%;}
+    40%   {color:yellow; left:40%; top:0;}
+    60%   {color:green; left:70%; top:10%;}
+    70%   {color:blue; left:40%; top:0;}
+    90%   {color:indigo; left:20%; top:10%;}
+    100%  {color:violet; left:0%; top:0;}
 }
 
 .programming img{
@@ -249,9 +249,11 @@
               <!-- Project Two -->
             <div class="row">
                 <div class="col-md-7">
-                    <a href="#">
-                        <img class="img-responsive" src="./images/web-tf.jpg" alt="">
+                    <a href="https://www.youtube.com/watch?v=DRcTI5-Kknw&feature=youtu.be">
+                      <img class="img-responsive" src="./images/web-tf.jpg" alt="">
                     </a>
+                    <br>
+                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/DRcTI5-Kknw?ecver=2&autoplay=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
                     <div class="programming">
                       <img src="./images/pl-php.png">
                       <img src="./images/db-mysql.png">
@@ -264,10 +266,14 @@
                 </div>
                 <div class="col-md-5">
                   <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">&nbsp;True or False</h3>
-                  <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web game application which tests MTA employee knowledge of operations and show top scores</h4>
-                  <p></p>
+                  <h4><i>NYCT Operations Training Simulator Lab</i></h4>                                                   
+                  <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web game application which tests MTA train operators knowledge of operations</h4>
+                  <ul>
+                    <li>Visualize top scores ,score histograms and distribution 
+                    <li>Show general test performance and top wrong questions</li>
+                  </ul>
                   <div class="btn-group">
-                    <a class="btn" href="">
+                    <a class="btn" href="https://www.youtube.com/watch?v=DRcTI5-Kknw&feature=youtu.be">
                       <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
                     </a>
                   </div>
@@ -293,8 +299,12 @@
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">&nbsp;Multiple Choice Test</h3>
-                      <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web testing application which tests MTA employee knowledge of operations, tracks and analyzes actions of choices</h4>
-                      <p></p>
+                      <h4><i>NYCT Operations Training Simulator Lab</i></h4>                                                   
+                      <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web testing application which tests MTA train operators knowledge of operations
+                      <ul>
+                        <li>Tracks and analyzes actions of choices during the test</li>
+                        <li>Generate timeline graph and data report for managers</li>
+                      </ul>
                       <div class="btn-group">
                         <a class="btn" href="">
                           <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
@@ -379,6 +389,7 @@
                     </a>
                      <div class="programming">
                       <img src="./images/fw-django.png">
+                      <img src="./images/pl-python.png">
                       <img src="./images/pl-sequelize.png">
                       <img src="./images/pl-js.png">
                       <img src="./images/pl-css-html.png">
