--- a/public/index.html
+++ b/public/index.html
@@ -40,24 +40,31 @@
 
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes example {
-    5%    {color:red; left:0; top:0;}
-    20%   {color:orange; left:20%; top:10%;}
-    40%   {color:yellow; left:40%; top:0;}
-    60%   {color:green; left:70%; top:10%;}
-    70%   {color:blue; left:40%; top:0;}
-    90%   {color:indigo; left:20%; top:10%;}
-    100%  {color:violet; left:0%; top:0;}
+    5%    {color:red;}
+    20%   {color:orange;}
+    40%   {color:yellow; }
+    60%   {color:green;}
+    70%   {color:blue; }
+    90%   {color:indigo;}
+    100%  {color:violet;}
 }
 
 /* Standard syntax */
 @keyframes example {
-    5%    {color:red; left:0; top:0;}
+      5%    {color:red;}
+    20%   {color:orange;}
+    40%   {color:yellow; }
+    60%   {color:green;}
+    70%   {color:blue; }
+    90%   {color:indigo;}
+    100%  {color:violet;}
+/*    5%    {color:red; left:0; top:0;}
     20%   {color:orange; left:20%; top:10%;}
     40%   {color:yellow; left:40%; top:0;}
     60%   {color:green; left:70%; top:10%;}
     70%   {color:blue; left:40%; top:0;}
     90%   {color:indigo; left:20%; top:10%;}
-    100%  {color:violet; left:0%; top:0;}
+    100%  {color:violet; left:0%; top:0;}*/
 }
 
 .programming img{
@@ -101,8 +108,8 @@
       <!-- Page Heading -->
       <div class="row">
           <div id="heading" class="col-lg-12">
-              <h1 class="page-header">
-                <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hello, World !</i><br>
+              <h1 class="page-header text-center">
+                <i>Hello, World !</i><br>
                   <!-- <small>Susan</small> -->
                   <span>
                   你<small>/nǐ/</small>好<small>/hǎo/</small>，
@@ -253,7 +260,7 @@
                       <img class="img-responsive" src="./images/web-tf.jpg" alt="">
                     </a>
                     <br>
-                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/DRcTI5-Kknw?ecver=2&autoplay=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/DRcTI5-Kknw?ecver=2&autoplay=1&loop=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
                     <div class="programming">
                       <img src="./images/pl-php.png">
                       <img src="./images/db-mysql.png">
@@ -272,11 +279,11 @@
                     <li>Visualize top scores ,score histograms and distribution 
                     <li>Show general test performance and top wrong questions</li>
                   </ul>
-                  <div class="btn-group">
+                 <!--  <div class="btn-group">
                     <a class="btn" href="https://www.youtube.com/watch?v=DRcTI5-Kknw&feature=youtu.be">
                       <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
                     </a>
-                  </div>
+                  </div> -->
                 </div>
             </div>
               <!-- /.row -->
@@ -305,11 +312,11 @@
                         <li>Tracks and analyzes actions of choices during the test</li>
                         <li>Generate timeline graph and data report for managers</li>
                       </ul>
-                      <div class="btn-group">
+                   <!--    <div class="btn-group">
                         <a class="btn" href="">
                           <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
                         </a>
-                      </div>
+                      </div> -->
                   </div>
               </div>
               <!-- /.row -->
