--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,9 @@
                       <img class="img-responsive" src="./images/web-tf.jpg" alt="">
                     </a>
                     <br>
-                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/DRcTI5-Kknw?ecver=2&autoplay=1&loop=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                    <div style="position:relative;height:0;padding-bottom:56.25%">
+                      <iframe src="https://www.youtube.com/embed/DRcTI5-Kknw?ecver=2&autoplay=1&loop=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                    </div>
                     <div class="programming">
                       <img src="./images/pl-php.png">
                       <img src="./images/db-mysql.png">
@@ -294,6 +296,10 @@
                     <a href="#">
                         <img class="img-responsive" src="./images/web-mc.jpg" alt="">
                     </a>
+                    <br>
+                    <div style="position:relative;height:0;padding-bottom:56.25%">
+                      <iframe src="https://www.youtube.com/embed/c6nC1VMYSH4?ecver=2&autoplay=1&loop=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                    </div>
                     <div class="programming">
                       <img src="./images/pl-php.png">
                       <img src="./images/db-mysql.png">
@@ -306,6 +312,7 @@
                   </div>
                   <div class="col-md-5">
                       <h3><img src="./images/logo-mta.jpg" alt="" style="width:45px">&nbsp;Multiple Choice Test</h3>
+
                       <h4><i>NYCT Operations Training Simulator Lab</i></h4>                                                   
                       <h4><i class="fa fa-star text-warning" aria-hidden="true"></i>&nbsp;A web testing application which tests MTA train operators knowledge of operations
                       <ul>
