--- a/public/index.html
+++ b/public/index.html
@@ -181,9 +181,69 @@
             <!-- Project One -->
             <div class="row">
               <div class="col-md-7">
-                <a href="#">
-                  <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <a href="">
+                  <img class="img-responsive" src="./images/web-buildme.jpg" alt="">
                 </a>
+                <br>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#myCarousel" data-slide-to="1"></li>
+                      <li data-target="#myCarousel" data-slide-to="2"></li>
+                      <li data-target="#myCarousel" data-slide-to="3"></li>
+                      <li data-target="#myCarousel" data-slide-to="4"></li>
+                      <li data-target="#myCarousel" data-slide-to="5"></li>
+                      <li data-target="#myCarousel" data-slide-to="6"></li>
+                      <li data-target="#myCarousel" data-slide-to="7"></li>
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+
+                      <div class="item active">
+                        <img src="./images/web-buildme.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-1.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-2.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-3.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-4.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-4.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-5.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/slide-buildme-6.jpg">
+                      </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
                 <div class="programming">
                   <img src="./images/fw-nodejs.png">
                   <img src="./images/pl-js.png">
@@ -191,9 +251,8 @@
                   <img src="./images/db-postgreSQL.png">
                   <img src="./images/pl-sequelize.png">
                   <img src="./images/lb-jquery.gif">
-                  <img src="./images/pl-css-html.png">
+                  <img src="./images/tp-jade.jpg">
                   <img src="./images/fw-boostrap.png">
-
                 </div>
               </div>
               <div class="col-md-5">
@@ -216,10 +275,10 @@
                   <a class="btn" href="https://github.com/susanjiang03/BuildMe">
                     <i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                   </a>
-                  <a class="btn" href="">
+                 <!--  <a class="btn" href="">
                     <i class="fa fa-youtube text-danger" aria-hidden="true" style="font-size:2vw"></i>
-                  </a>
-                   <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
+                  </a> -->
+                   <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                 </div>
               </div>
             </div>
@@ -421,7 +480,7 @@
                       <div class="btn-group">
                         <a class="btn" href="https://github.com/susanjiang03/pipeline_monitor"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                         </a>
-                        <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
+                        <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                       </div>
                   </div>
               </div>
@@ -450,7 +509,7 @@
                       <div class="btn-group">
                         <a class="btn" href="https://github.com/susanjiang03/EbookSharing"><i class="fa fa-github" aria-hidden="true" style="font-size:2vw"></i>
                         </a>
-                        <a class="btn btn-primary" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
+                        <a class="btn btn-primary disabled" href="">View <i class="fa fa-external-link" aria-hidden="true"></i></a>(Deploy Soon ...)
                       </div>
                   </div>
               </div>
