--- a/public/index.html
+++ b/public/index.html
@@ -205,31 +205,31 @@
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-1.jpg">
+                        <img src="./images/slide-buildme-1.JPG">
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-2.jpg">
+                        <img src="./images/slide-buildme-2.JPG">
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-3.jpg">
+                        <img src="./images/slide-buildme-3.JPG">
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-4.jpg">
+                        <img src="./images/slide-buildme-4.JPG">
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-4.jpg">
+                        <img src="./images/slide-buildme-4.JPG">
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-5.jpg">
+                        <img src="./images/slide-buildme-5.JPG">
                       </div>
 
                       <div class="item">
-                        <img src="./images/slide-buildme-6.jpg">
+                        <img src="./images/slide-buildme-6.JPG">
                       </div>
                     </div>
 
