--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a class="navbar-brand" href="#section0">SUMMARY</a></li>
+            <li class="active"><a class="navbar-brand" href="#summary">SUMMARY</a></li>
             <li><a href="#experience">EXPERIENCE</a></li>
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#section3">AFFILIATIONS</a></li>
@@ -176,6 +176,24 @@
           </div>
         </div>
         <div class="col-lg-9" style="padding-left:2%">
+          <div id="summary">
+            <h2 class="text-center">SUMMARY</h2>
+            <div class="h4 row text-primary">
+              <ul class="list-group">
+                <li class="list-group-item">To secure a position in software development where I can contribute my skills and abilities to the growth of the organization and build tech solutions for business and people to make life more efficient
+                </li>
+                <li class="list-group-item">Critical thinking, love to solve problems, with innovative ideas, willing to accept challenge every day.</li>
+                <li class="list-group-item">Solid understanding of data structure, algorithms, OOP, and modern design patterns.</li>
+                <li class="list-group-item">Experienced Technical Developer with a demonstrated history of working in the information technology. 
+                </li>
+                <li class="list-group-item">Skilled in Python, JavaScript, PHP, SQL, C++, and jQuery etc. 
+                </li>
+                <li class="list-group-item">Strong engineering professional, graduated from The City College of New York, City University of New York. 
+                </li>
+              </ul>
+            </div>
+          </div>
+          <hr>
           <div id="projects">
             <h2 class="text-center">PROJECTS</h2>
             <!-- Project One -->
