--- a/public/index.html
+++ b/public/index.html
@@ -199,21 +199,18 @@
             <!-- Project One -->
             <div class="row">
               <div class="col-md-7">
-                <a href="">
-                  <img class="img-responsive" src="./images/web-buildme.jpg" alt="">
-                </a>
                 <br>
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <div id="carouselBuildme" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
-                      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                      <li data-target="#myCarousel" data-slide-to="1"></li>
-                      <li data-target="#myCarousel" data-slide-to="2"></li>
-                      <li data-target="#myCarousel" data-slide-to="3"></li>
-                      <li data-target="#myCarousel" data-slide-to="4"></li>
-                      <li data-target="#myCarousel" data-slide-to="5"></li>
-                      <li data-target="#myCarousel" data-slide-to="6"></li>
-                      <li data-target="#myCarousel" data-slide-to="7"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="1"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="2"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="3"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="4"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="5"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="6"></li>
+                      <li data-target="#carouselBuildme" data-slide-to="7"></li>
                     </ol>
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
@@ -252,11 +249,11 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <a class="left carousel-control" href="#carouselBuilme" role="button" data-slide="prev">
                       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <a class="right carousel-control" href="#carouselBuilme" role="button" data-slide="next">
                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -370,9 +367,73 @@
               <!-- Project Three -->
               <div class="row">
                   <div class="col-md-7">
-                    <a href="#">
-                        <img class="img-responsive" src="./images/web-mc.jpg" alt="">
+                    <div id="carouselMC" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselMC" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselMC" data-slide-to="1"></li>
+                      <li data-target="#carouselMC" data-slide-to="2"></li>
+                      <li data-target="#carouselMC" data-slide-to="3"></li>
+                      <li data-target="#carouselMC" data-slide-to="4"></li>
+                      <li data-target="#ccarouselMC" data-slide-to="5"></li>
+                      <li data-target="#carouselMC" data-slide-to="6"></li>
+                      <li data-target="#carouselMC" data-slide-to="7"></li>
+                      <li data-target="#carouselMC" data-slide-to="8"></li>
+                      <li data-target="#carouselMC" data-slide-to="9"></li>
+
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+
+                      <div class="item active">
+                        <img src="./images/web-mc.jpg">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-1.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-2.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-3.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-4.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-5.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-6.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/mc-7.PNG">
+                      </div>
+                      <div class="item">
+                        <img src="./images/mc-8.PNG">
+                      </div>
+
+                      <div class="item">
+                        <img src="./images/test.PNG">
+                      </div>
+                    </div>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#carouselMC" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
                     </a>
+                    <a class="right carousel-control" href="#carouselMC" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
                     <br>
                     <div style="position:relative;height:0;padding-bottom:56.25%">
                       <iframe src="https://www.youtube.com/embed/c6nC1VMYSH4?ecver=2&autoplay=1&loop=1" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
