--- a/public/index.html
+++ b/public/index.html
@@ -106,22 +106,21 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    font-weight: bold
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  /*background-color: #f1f1f1*/
+    background-color: red;
+    color:white;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    /*background-color: #3e8e41;*/
-    background-color: red;
-    color:white;
-}
 </style>
 
   <body>
@@ -129,6 +128,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
+           
+
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -137,18 +138,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#aboutme" class="navbar-brand">About Me &nbsp;&nbsp;</a>
+            <a href="#aboutme" class="navbar-brand" style="padding-top:0">
+               <img src="./images/jane.jpg" style="height:50px;">
+            </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li class="active"><a class="navbar-brand" href="#summary">SUMMARY</a></li>
+            <li><a href="#skills">SKILLS</a></li>
             <li class="dropdown">
               <a class="btn dropbtn" href="#projects">PROJECTS &nbsp;<span class="caret"></span></a>
-              <div class="dropdown-content">
+              <div class="dropdown-content" style="width:200%">
                 <a href="#buildme">Build Me</a>
                 <a href="#visualcode">Visual Code</a>
                 <a href="#testMC">Multiple Choice Test</a>
                 <a href="#testTF">True or False</a>
+                <a href="#dreamgo">Dream Go</a>
+                <a href="#terrestrial_hydrology_viz"> Terrestrial Hydrology Viz</a>
+                <a href="#pipeline_monitor">Pipeline Monitor</a>
+                <a href="#ebooksharing">E-book Sharing </a>
               </div>
             </li>
             <li><a href="#timeline">TIMELINE</a></li>
@@ -639,7 +647,7 @@
                 </div>
               </div>
               <hr>
-
+              <hr>
                 <!-- Project 7 -->
               <div class="row">
                 <div class="col-md-7">
@@ -671,8 +679,10 @@
             </div>
             <!-- /.row -->
             <hr>
-
+            <div id="timeline">
+            <h1 class="text-center">TIMELINE</h1>
             </div>
+        </div>
       </div>   <!-- /.row -->
     </div>
             <hr>
