--- a/public/index.html
+++ b/public/index.html
@@ -161,8 +161,8 @@
             </li>
             <li><a href="#timeline">TIMELINE</a></li>
             <li><a href="#section3">AFFILIATIONS</a></li>
-            <li><a href="#section5">INTEREST</a></li>
             <li><a href="#section6">RESUME</a></li>
+            <li><a href="#section5">MORE</a></li>
           </ul>
         </div>
       </div>
@@ -229,6 +229,7 @@
               </div>
               <hr>
              <!-- <div class="barChart"> -->
+             <div  id="skills">
               <h2>SKILLS</h2>
               <h4>Programming</h4>
               <div id="barchartProgramming"></div>
@@ -238,6 +239,7 @@
               <div id="barchartLibrary"></div> 
               <h4>Application</h4>
               <div id="barchartApplication"></div>
+            </div>
            </div>
           </div>
         </div>
@@ -265,7 +267,7 @@
             <hr>
             <hr>
             <!-- Project One -->
-            <div class="row">
+            <div id="buildme" class="row">
               <div class="col-md-7">
                 <div class="programming">
                   <img src="./images/fw-nodejs.png">
@@ -368,7 +370,7 @@
             <hr>
             <hr>
               <!-- Project Two -->
-            <div class="row">
+            <div id="testMC" class="row">
                 <div class="col-md-7">
                     <div class="programming">
                       <img src="./images/pl-php.png">
@@ -397,7 +399,7 @@
               <!-- /.row -->
             <hr>
               <!-- Project Three -->
-              <div class="row">
+              <div id="testMC" class="row">
                   <div class="col-md-7">
                     <div class="programming">
                       <img src="./images/pl-php.png">
@@ -502,7 +504,7 @@
             <hr>
 
                             <!-- Project Two -->
-            <div class="row">
+            <div id="testTF" class="row">
                 <div class="col-md-7">
                   <div class="programming">
                     <img src="./images/pl-php.png">
@@ -547,7 +549,7 @@
               <hr>
               <hr>
               <!-- Project Four -->
-              <div class="row">
+              <div id="dreamgo" class="row">
                 <div class="col-md-7">
                   <div class="programming">
                     <img src="./images/pl-php.png">
@@ -581,7 +583,7 @@
               <hr>
 
               <!-- Project Five -->
-              <div class="row">
+              <div id="terrestrial_hydrology_viz" class="row">
                 <div class="col-md-7">
                   <div class="programming">
                     <img src="./images/lb-d3.png">
@@ -616,7 +618,7 @@
               <hr>
 
                 <!-- Project Six -->
-              <div class="row">
+              <div id="pipeline_monitor" class="row">
                 <div class="col-md-7">
                  <div class="programming">
                     <img src="./images/fw-django.png">
@@ -649,7 +651,7 @@
               <hr>
               <hr>
                 <!-- Project 7 -->
-              <div class="row">
+              <div id="ebooksharing" class="row">
                 <div class="col-md-7">
                   <div class="programming">
                     <img src="./images/pl-java.png">
