--- a/public/test.html
+++ b/public/test.html
@@ -41,11 +41,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand">
+                    <!-- <img src="./images/logo-visualcode.jpg" alt="" style="width:45px"> -->
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+<!--                 <ul class="nav navbar-nav">
                     <li>
                         <a href="#">About</a>
                     </li>
@@ -55,7 +57,7 @@
                     <li>
                         <a href="#">Contact</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -68,9 +70,10 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Page Heading
-                    <small>Secondary Text</small>
-                </h1>
+              <h1>
+                <img src="./images/logo-visualcode.jpg" alt="" style="width:60px">&nbsp;Visual Code
+                <small>Demo algorithm for programming questions in visual pipeline</small>
+              </h1>
             </div>
         </div>
         <!-- /.row -->
@@ -208,7 +211,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Susan Jiang 2017</p>
                 </div>
             </div>
             <!-- /.row -->
