--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#aboutme" class="navbar-brand" style="padding-top:0">
-               <img src="./images/jane.jpg" style="height:50px;">
+            <a href="#aboutme" class="navbar-brand" style="padding-top:0" alt="aboutme">
+               <img src="../images/jane.jpg" style="height:50px;">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
