--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="#aboutme" class="navbar-brand" style="padding-top:0" alt="aboutme">
-               <img src="../images/jane.jpg" style="height:50px;">
+               <img src="../images/jane.JPG" style="height:50px;">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
