--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,9 @@
             </div>
             <div class="text-center" >
               <h3><b>Susan Lingshan Jiang</b></h3>
-              <h4><a><i class="fa fa-envelope"></i>&nbsp;susanjiang03@gmail.com</a></h4>
+              <div class="btn" onClick="location.href='mailto:susanjiang03@gmail.com'" style="font-size:1.5vw">
+                <a><i class="fa fa-envelope" ></i>&nbsp;susanjiang03@gmail.com</a>
+              </div>
               <h4><i class="fa fa-phone"></i>&nbsp;+1 (646) 247-0567</h4>
               <div class="row btn-group">
                 <a class="btn" href="https://github.com/susanjiang03" target="_blank" style="font-size:2.5vw">
